[project]
name = "kvikio-zarr-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kvikio-cu12>=25.2.0",
    "nvtx>=0.2.11",
    "zarr",
]

[tool.uv.sources]
zarr = { git = "https://github.com/akshaysubr/zarr-python", rev = "gpu-codecs" }

[tool.uv]
override-dependencies = [ "zarr @ git+https://github.com/akshaysubr/zarr-python@gpu-codecs" ]
